--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "expo": "^47.0.0",
+    "moti": "^0.21.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-reanimated": "~2.12.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
